--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+    <div class="container">
+        <div class="immagine">
+            <img src="img/01.webp" alt="immagine">
+        </div>
+    </div>
+
     <script src="js/myscript.js"></script>
     
 </body>
