--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Carosello Mono Array</title>
 </head>
 <body>
 
     <div class="container">
         <div class="immagine">
-            <img src="img/01.webp" alt="immagine">
+            <img src="img/04.webp" alt="immagine">
         </div>
     </div>
 
