--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
 
     <div class="container">
         <div class="immagine">
+            <img src="img/01.webp" alt="immagine">
+        </div>
+        <div class="immagine">
+            <img src="img/02.webp" alt="immagine">
+        </div>
+        <div class="immagine">
+            <img src="img/03.webp" alt="immagine">
+        </div>
+        <div class="immagine">
             <img src="img/04.webp" alt="immagine">
+        </div>
+        <div class="immagine">
+            <img src="img/05.webp" alt="immagine">
         </div>
     </div>
 
