--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-    <div class="container">
-        <div class="immagine">
+    <div id="container">
+        <!-- <div class="immagine">
             <img src="img/01.webp" alt="immagine">
         </div>
         <div class="immagine">
@@ -24,8 +24,10 @@
         </div>
         <div class="immagine">
             <img src="img/05.webp" alt="immagine">
-        </div>
+        </div> -->
     </div>
+
+    
 
     <script src="js/myscript.js"></script>
     
