--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <a href="#" class="next">
             <i class="fa-solid fa-angle-down"></i>
         </a>
+
+        <div class="slider"></div>
         
     </div>
 
